Added instructions to README.md