@@ -1,2 +1,14 @@
 # MemoryGame
 Memory game
+
+1. git clone git@github.com:RenasSaid/MemoryGame.git
+2. Download and install your OS version of JavaFX from https://gluonhq.com/products/javafx/
+3. In VScode add to vmArgs to launch.json:
+        "vmArgs": "--module-path <path to javafx lib folder> --add-modules javafx.controls,javafx.fxml",
+4. In VSCode under "JAVA PROJECTS", add javafx files to "referenced libraries"
+5. Run.
+
+Tests
+
+1. In VSCode open "Testing" in the left side pane.
+2. Run tests.
